Fix Java 8 build errors in apriltag
* No Path.of
* No List.of()