@@ -10,7 +10,7 @@ import edu.wpi.first.math.geometry.Pose3d;
 import edu.wpi.first.math.geometry.Rotation3d;
 import edu.wpi.first.math.geometry.Translation3d;
 import edu.wpi.first.math.util.Units;
-import java.util.List;
+import java.util.Arrays;
 import org.junit.jupiter.api.Test;
 
 class AprilTagPoseSetOriginTest {
@@ -18,7 +18,7 @@ class AprilTagPoseSetOriginTest {
   void transformationMatches() {
     var layout =
         new AprilTagFieldLayout(
-            List.of(
+            Arrays.asList(
                 new AprilTag(1, new Pose3d(new Translation3d(0, 0, 0), new Rotation3d(0, 0, 0))),
                 new AprilTag(
                     2,
