@@ -11,7 +11,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import edu.wpi.first.math.geometry.Pose3d;
 import edu.wpi.first.math.geometry.Rotation3d;
 import edu.wpi.first.math.util.Units;
-import java.util.List;
+import java.util.Arrays;
 import org.junit.jupiter.api.Test;
 
 class AprilTagSerializationTest {
@@ -19,7 +19,7 @@ class AprilTagSerializationTest {
   void deserializeMatches() {
     var layout =
         new AprilTagFieldLayout(
-            List.of(
+            Arrays.asList(
                 new AprilTag(1, new Pose3d(0, 0, 0, new Rotation3d(0, 0, 0))),
                 new AprilTag(3, new Pose3d(0, 1, 0, new Rotation3d(0, 0, 0)))),
             Units.feetToMeters(54.0),
